cmake_minimum_required(VERSION 3.7)

set(DX11VIEWER_PROJECT_NAME "DX11_Viewer")

project(${DX11VIEWER_PROJECT_NAME} CXX)

set(${DX11VIEWER_PROJECT_NAME}_VERSION_MAJOR 0)
set(${DX11VIEWER_PROJECT_NAME}_VERSION_MINOR 1)
set(${DX11VIEWER_PROJECT_NAME}_VERSION_PATCH 0)

message("")
message("${DX11VIEWER_PROJECT_NAME}: BUILD ENABLE")
message("~~~ ${DX11VIEWER_PROJECT_NAME} ~~~")


# DX11 Viewer

set(DX11VIEWER_PATH "${${DX11VIEWER_PROJECT_NAME}_SOURCE_DIR}")

add_definitions(-D_UNICODE)

file(GLOB_RECURSE CppFiles sources/*.cpp)
file(GLOB_RECURSE HppFiles includes/*.hpp)
file(GLOB_RECURSE CFiles sources/*.c)
file(GLOB_RECURSE HFiles includes/*.h)

add_executable(${DX11VIEWER_PROJECT_NAME} ${CppFiles} ${HppFiles} ${CFiles} ${HFiles})

target_include_directories(${DX11VIEWER_PROJECT_NAME} PUBLIC "${DX11VIEWER_PATH}/include")

set_target_properties(${DX11VIEWER_PROJECT_NAME} PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:WINDOWS")
set_target_properties(${DX11VIEWER_PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS")
set_target_properties(${DX11VIEWER_PROJECT_NAME} PROPERTIES LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:WINDOWS")
set_target_properties(${DX11VIEWER_PROJECT_NAME} PROPERTIES LINK_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:WINDOWS")